tp-k8s-esiea-2026/poggi_victor/manifest/dev/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: online-boutique-dev
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/google-samples/microservices-demo/frontend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /_healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /_healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
