tp-k8s-esiea-2026/poggi_victor/manifest/dev/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: online-boutique-dev
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
